--- a/7.Linear_algebra.ipynb
+++ b/7.Linear_algebra.ipynb
@@ -314,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 컴포넌트별 평균 : vector_mean([1, 2], [2, 4], [3, 6]) == [3, 6] "
+    "* 컴포넌트별 평균 : ```vector_mean([1, 2], [2, 4], [3, 6]) == [2, 4]``` "
    ]
   },
   {
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1050,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.43603617, 0.40738305, 0.68908254, 0.90913208])"
+       "array([0.58760612, 0.33940918, 0.08334586, 0.50487104])"
       ]
      },
      "execution_count": 48,
@@ -1070,7 +1070,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-0.18671379,  0.80520569, -0.49766056,  0.43542663])"
+       "array([ 1.21036296, -0.39189033, -0.34292625,  0.43452542])"
       ]
      },
      "execution_count": 49,
@@ -1090,7 +1090,7 @@
     {
      "data": {
       "text/plain": [
-       "array([2.80089318, 7.00158451, 3.71552794, 2.36294334])"
+       "array([ 4.47487228,  4.29542421,  2.80871471, -1.36554071])"
       ]
      },
      "execution_count": 50,
@@ -1136,7 +1136,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "153 ms ± 688 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "163 ms ± 3.82 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -1153,7 +1153,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11.7 ms ± 91.9 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "11.5 ms ± 168 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -1904,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1914,7 +1914,7 @@
        "       6.5, 7. , 7.5, 8. , 8.5, 9. , 9.5])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1926,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1935,7 +1935,7 @@
        "array([5.5, 6. , 6.5, 7. ])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1953,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1979,7 +1979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1988,7 +1988,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1999,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -2008,7 +2008,7 @@
        "False"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2019,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2028,7 +2028,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2048,7 +2048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -2058,7 +2058,7 @@
        "       [3, 4]])"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2071,7 +2071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2081,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -2091,7 +2091,7 @@
        "       [ 3,  4]])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2105,7 +2105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2115,7 +2115,7 @@
        "       [ 3,  4]])"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2133,7 +2133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2143,7 +2143,7 @@
        "       [ 3,  4]])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2157,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -2167,7 +2167,7 @@
        "       [ 3,  4]])"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2187,7 +2187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -2196,7 +2196,7 @@
        "array([0, 2, 4, 6, 8])"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2209,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2218,7 +2218,7 @@
        "array([12,  2,  4,  6,  8])"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2230,7 +2230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -2239,7 +2239,7 @@
        "array([12,  1,  2,  3,  4,  5,  6,  7,  8,  9])"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2250,7 +2250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -2259,7 +2259,7 @@
        "array([12,  2,  4,  6,  8])"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2273,7 +2273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -2282,7 +2282,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2293,7 +2293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -2302,7 +2302,7 @@
        "array([10,  1,  2,  3,  4,  5,  6,  7,  8,  9])"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2317,7 +2317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -2326,7 +2326,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2348,7 +2348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2358,7 +2358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -2367,7 +2367,7 @@
        "array([10,  1,  2])"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2379,7 +2379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -2388,7 +2388,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2416,7 +2416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2435,7 +2435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -2444,7 +2444,7 @@
        "array([12,  4, -4])"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2462,7 +2462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -2471,7 +2471,7 @@
        "11"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2489,7 +2489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -2498,7 +2498,7 @@
        "-1"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2516,7 +2516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 112,
    "metadata": {
     "scrolled": true
    },
@@ -2527,7 +2527,7 @@
        "4.242640687119285"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2545,7 +2545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -2554,36 +2554,13 @@
        "array([ 0,  1, -2])"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a * b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 2],\n",
-       "       [3, 4]])"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "M = np.array([[1,2], [3,4]])\n",
-    "\n",
-    "M"
    ]
   },
   {
@@ -2595,7 +2572,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4]])"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M = np.array([[1,2], [3,4]])\n",
+    "\n",
+    "M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -2605,7 +2605,7 @@
        "       [2, 4]])"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2623,7 +2623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -2632,7 +2632,7 @@
        "-2.0000000000000004"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2650,7 +2650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -2660,7 +2660,7 @@
        "       [ 1.5, -0.5]])"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2678,7 +2678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -2687,7 +2687,7 @@
        "array([-3. ,  2.5])"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2714,7 +2714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -2724,7 +2724,7 @@
        "       [ 2,  1]])"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2737,7 +2737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -2747,7 +2747,7 @@
        "       [5, 7]])"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2760,12 +2760,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "M과 N이 2d-array일 때, 다음과 같이 표현하기도 한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 3],\n",
+       "       [5, 7]])"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M.dot(N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 3],\n",
+       "       [5, 7]])"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M @ N"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* 행렬의 원소별 곱셈"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -2775,7 +2824,7 @@
        "       [ 6,  4]])"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2800,7 +2849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -2809,7 +2858,7 @@
        "array([1.        , 1.41421356, 1.73205081, 2.        ])"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2820,7 +2869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -2829,7 +2878,7 @@
        "array([1.        , 1.41421356, 1.73205081, 2.        ])"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2840,7 +2889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -2849,13 +2898,114 @@
        "array([ True, False, False])"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.array([True, False, True]) &  np.array([True, True, False])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Concatenation\n",
+    "\n",
+    "```r_``` : 객체를 첫 번째 축을 따라 연결되도록 변환\n",
+    "\n",
+    "```c_``` : 객체를 두 번째 축을 따라 연결되도록 변환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 0, 0, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.r_[np.array([1,2,3]), 0, 0, np.array([4,5,6])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4],\n",
+       "       [5, 6],\n",
+       "       [7, 8]])"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array([[1,2],[3,4]])\n",
+    "B = np.array([[5,6],[7,8]])\n",
+    "np.r_[A, B]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 4],\n",
+       "       [2, 5],\n",
+       "       [3, 6]])"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.c_[np.array([[1],[2],[3]]), np.array([[4],[5],[6]])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 5, 6],\n",
+       "       [3, 4, 7, 8]])"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array([[1,2],[3,4]])\n",
+    "B = np.array([[5,6],[7,8]])\n",
+    "np.c_[A, B]"
    ]
   }
  ],
