--- a/02.Python_Basic.ipynb
+++ b/02.Python_Basic.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Python의 기본\n",
+    "# 2. [Python](https://www.python.org/)의 기본\n",
     "-------------------\n",
     "\n",
     "## Python 프로그램 개요\n",
@@ -12,7 +12,7 @@
     "* Python 프로그램의 소스 코드는 일련의 정의와 명령문으로 구성된다.\n",
     "\n",
     "\n",
-    "* Python 프로그램이나 소스 코드는 스크립트(script)라고도 불림.\n",
+    "* Python 프로그램이나 소스 코드는 스크립트 (script)라고도 불림.\n",
     "\n",
     "\n",
     "* 프로그램을 작성하는 사람이 command 혹은 statement라고 불리는 문장들을 작성하여, 이 문장들을 통해 Python 인터프리터가 프로그램 작성자의 목적에 맞는 일을 하도록 지시한다.\n",
@@ -20,7 +20,7 @@
     "\n",
     "* 다음은 print 문장을 이용한 간단한 프로그램이다.\n",
     "\n",
-    " * In [1]: 의 오른쪽의 내용이 우리가 작성하는 프로그램의 내용이며 그 다음 줄의 내용이 프로그램의 실행 결과이다."
+    " * In [1]: 의 오른쪽의 내용이 우리가 작성하는 프로그램의 내용이며 그 다음 줄의 내용이 프로그램의 출력 결과이다."
    ]
   },
   {
@@ -48,20 +48,18 @@
     "\n",
     "프로그래밍에 사용되는 데이터들은 데이터 타입 (데이터 형)을 구분한다.\n",
     "\n",
-    "Python에는 크게 세 가지 데이터 타입이 존재\n",
-    "* 숫자형\n",
+    "Python에는 크게 세 가지 기본 데이터 타입이 존재하며 `type()` 함수로 확인할 수 있다.\n",
+    "* [숫자](https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex) (`int`, `float`)\n",
     "  * ```5```, ```10.3```, ```-2```, ```-1.02```\n",
     "  * 사칙연산 등을 수행할 수 있음\n",
     "  * 숫자형 데이터는 다시 정수형과 실수형으로 구분할 수 있다.\n",
-    "\n",
-    "\n",
-    "* 문자열\n",
+    "* [문자열](https://docs.python.org/3/library/stdtypes.html#text-sequence-type-str) (`str`)\n",
     "  * ```\"apple\"```, ```\"Hello, world!\"```, ```'Yeungnam University'```, ```\"15\"```\n",
     "  * 큰 따옴표나 작은 따옴표로 표현\n",
+    "* [부울, Boolean](https://docs.python.org/3/library/stdtypes.html#truth-value-testing) (`bool`)\n",
+    "  * ```True```, ```False```\n",
     "\n",
-    "\n",
-    "* 부울(Bool)\n",
-    "  * ```True```, ```False```\n"
+    "그 외에 리스트(`list`), 투플(`tuple`), 딕셔너리(`dict`) 등에 대해 공부할 것이다."
    ]
   },
   {
@@ -71,7 +69,7 @@
     "### 수치와 연산\n",
     "\n",
     "* 숫자형 데이터에는 사칙연산이나 나머지, 제곱 등의 연산을 적용할 수 있다.\n",
-    "* IPython 콘솔은 마치 계산기처럼 이용 가능하다.\n"
+    "* Jupyter의 코드 셀로 표현되는 IPython 콘솔은 마치 계산기처럼 이용 가능하다."
    ]
   },
   {
@@ -138,12 +136,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-info\">  \n",
+    "<b>Python 2 :</b> \n",
+    "    \n",
     "* Python 2.x에서는 정수끼리 나누기 연산의 결과는 정수로 나타난다. 소수점 아래의 숫자는 버린다.\n",
-    "    * 3/4 -> 0\n",
-    "    \n",
-    "    \n",
+    "  * 3/4의 결과는 0이며, 6/4의 결과는 1  \n",
     "* Python 2.x에서는 나누기를 통하여 실수 결과를 얻고자 할 때는 연산되는 수를 실수형으로 먼저 바꾼 후 진행한다.\n",
-    "    * ```3 / 4.0``` 혹은 ```3.0 / 4```"
+    "    * ```3 / 4.0``` 혹은 ```3.0 / 4```\n",
+    "</div>\n"
    ]
   },
   {
@@ -371,14 +371,15 @@
     "\n",
     "------------------------\n",
     "\n",
-    "* 변수는 값을 나타내는 기호 또는 이름을 말한다.\n",
-    "  * 변수는 컴퓨터 프로그래밍의 가장 기본적인 구성요소로 반드시 잘 이해해 두어야 한다.\n",
-    "  * 프로그램을 처음 시작하는 경우, 변수를 왜 사용해야 하는지 이해하기 힘든 경우도 있으니, 주의깊게 아래 내용을 살펴보자.\n",
+    "<p> &#9635 <font color=#00008B> 변수 </font> - 데이터를 저장하고 나중에 재사용할 수 있도록 이름이 붙어 있는 값을 말한다. </p>\n",
+    "\n",
+    "* 변수는 컴퓨터 프로그래밍의 가장 기본적인 구성요소로 반드시 잘 이해해 두어야 한다.\n",
+    "* 프로그램을 처음 시작하는 경우, 변수를 왜 사용해야 하는지 이해하기 힘든 경우도 있으니, 주의깊게 아래 내용을 살펴보자.\n",
     "  \n",
     "  \n",
     "  \n",
-    "* 계산을 하다보면 특정 변수를 생성하여 값을 지정하고 변수를 통하여 수식을 계산하는 것이 더 편리할 경우가 많다.\n",
-    "  * 수학 문제를 풀 때, x나 y와 같은 변수 기호를 이용하여, 문제를 더 간결하게 표현하는 것과 비슷한 원리이다.\n",
+    "계산을 하다보면 특정 변수를 생성하여 값을 지정하고 변수를 통하여 수식을 계산하는 것이 더 편리할 경우가 많다.\n",
+    "  * 수학 문제를 풀 때, $x$나 $y$와 같은 변수 기호를 이용하여, 문제를 더 간결하게 표현하는 것과 비슷한 원리이다.\n",
     "  "
    ]
   },
@@ -389,12 +390,8 @@
     "### 변수 생성의 기본 방법\n",
     "\n",
     "* 수학에서 $x=10$과 같이 변수와 그 값을 지정하듯이 Python에서도 등호(```=```)를 이용하여 변수의 값을 지정한다.  \n",
-    "\n",
-    "\n",
     "* 변수의 이름, 변수명은 기본적인 규칙을 지키는 선에서 마음대로 지어주면 된다. \n",
     "   * 이 규칙에 대해서는 잠시 후에 살펴본다.\n",
-    "   \n",
-    "   \n",
     "* 대입 연산에서는 반드시 왼쪽에 변수명이 등장한다."
    ]
   },
@@ -402,7 +399,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "정수형 변수 지정\n",
+    "<p> &#9635 <font color=#00008B> 정수형 변수 지정 </font> </p>\n",
+    "\n",
     " * 다음을 '`my_integer`는 10과 같다'고 해석을 해서는 안 된다. '`my_integer`에 10을 대입한다'와 같이 해석한다.\n",
     " \n",
     " * 정의된 변수를 코드 셀에 다시 타이핑하여 값의 내용을 출력하도록 하였다."
@@ -433,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "실수형 변수 지정"
+    "<p> &#9635 <font color=#00008B> 실수형 변수 지정 </font> </p>"
    ]
   },
   {
@@ -469,7 +467,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "문자열 변수 지정"
+    "<p> &#9635 <font color=#00008B> 문자열 변수 지정 </font> </p>"
    ]
   },
   {
@@ -497,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "부울형 변수 지정"
+    "<p> &#9635 <font color=#00008B> 부울형 (Boolean) 변수 지정 </font> </p>"
    ]
   },
   {
@@ -543,16 +541,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">  \n",
-    "<b>에러:</b> \n",
-    "    존재하지 않는 변수를 사용하려고 하면 NameError가 발생한다.     \n",
-    "</div>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -564,7 +552,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [20]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmy_integer2\u001b[49m\n",
+      "Cell \u001b[1;32mIn[20], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmy_integer2\u001b[49m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'my_integer2' is not defined"
      ]
     }
@@ -577,7 +565,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "위의 예제들처럼 대입 연산의 오른쪽에는 상수값이 오거나, 다음의 예제들처럼 기존의 변수 혹은 기존의 변수를 이용한 식 등이 올 수 있다."
+    "<div class=\"alert alert-block alert-danger\">  \n",
+    "<b>에러:</b> \n",
+    "    존재하지 않는 변수, 위에서는 <code>my_integer2</code>를 사용하려고 하면 NameError가 발생한다.     \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "앞의 예제들처럼 대입 연산의 오른쪽에는 상수값이 오거나, 다음의 예제들처럼 기존의 변수 혹은 기존의 변수를 이용한 식 등이 올 수 있다."
    ]
   },
   {
@@ -631,7 +629,7 @@
     "### 변수와 객체\n",
     "\n",
     "* Python에 존재하는 거의 모든 것들은 객체 (object)라는 형태로 존재한다.\n",
-    "  * 숫자, 문자열, 리스트, dictionary 등이 있으며, 이 과목을 통해 자세히 살펴볼 것이다.\n",
+    "  * 숫자, 문자열, 리스트, dictionary, ndarray, function 등이 있으며, 이 과목을 통해 자세히 살펴볼 것이다.\n",
     "* 변수는 이러한 객체들에 이름을 붙여, 추후에 참조하여 더 복잡한 연산에 사용할 수 있도록 하는 역할을 한다.\n",
     "  * 객체는 데이터의 실질적인 존재, 변수 혹은 변수명은 그 존재를 지칭하는 이름이라고 생각하자."
    ]
@@ -688,9 +686,6 @@
     "    * double precision을 가지는 실수형 변수\n",
     "  * `char c = 'a'`\n",
     "    * 문자(character)형 변수\n",
-    "\n",
-    "\n",
-    "\n",
     "* Python은 int, double, char 등과 같은 변수형에 대한 키워드(keyword)를 따로 선언해 주지 않는다.\n",
     "  * 프로그래머는 변수형을 일일이 입력할 필요가 없으니 편리한 점이 있음\n"
    ]
@@ -802,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "cell_style": "center"
    },
@@ -852,7 +847,7 @@
     "### 문자열 (string) 출력해 보기\n",
     "\n",
     "프로그래밍의 가장 기본 예제를 연습해 보자. Python은 인터프리터 언어로서 매우 간단하게 Hello world 프로그램을 작성할 수 있다.\n",
-    "* 이 때, ```print()```라는 명령이 사용된다."
+    "* 이 때, [```print()```](https://docs.python.org/3/library/functions.html#print)라는 명령이 사용된다."
    ]
   },
   {
@@ -896,19 +891,9 @@
     "위 예제에서 따옴표로 둘러싸여 있는 부분은 문자열을 의미하며 print 명령을 통해 해당 문자열 - 여기서는 Hello, world! - 을 화면에 출력하라는 뜻이다.\n",
     "* 문자열을 생성할 때는 따옴표로 해당 문자열을 감싸준다.\n",
     "  * 큰 따옴표, 작은 따옴표 모두 가능\n",
-    "\n",
     "* Python 2.x에서는 ```print``` 명령에 괄호 생략 가능\n",
     "* Python 3.0 이상에서는 ```print```가 함수로 변경되었기 때문에, 반드시 괄호를 이용해야 한다.\n",
     "* https://docs.python.org/3/whatsnew/3.0.html#print-is-a-function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>에러:</b> 문자를 사용할 때, 문자열 기호를 생략하면 당연히 에러가 발생하니 주의하자.\n",
-    "</div>"
    ]
   },
   {
@@ -921,12 +906,21 @@
      "evalue": "invalid syntax (4206259929.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [29]\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(Hello, world!)\u001b[0m\n\u001b[1;37m                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[29], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(Hello, world!)\u001b[0m\n\u001b[1;37m                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "print(Hello, world!)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "<b>에러:</b> 문자열을 사용할 때, 문자열 기호 <code>\"</code> 혹은 <code>'</code>를 생략하면 당연히 에러가 발생하니 주의하자.\n",
+    "</div>"
    ]
   },
   {
@@ -1072,11 +1066,29 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "혹은 다음을 노트북의 가장 위에 설정 한 후에 여러 변수를 출력하게 할 수 있다.\n",
+    "[`InteractiveShell.ast_node_interactivity`](https://ipython.readthedocs.io/en/stable/config/options/terminal.html)의 default option은 `last_expr`이다.\n",
+    "\n",
+    "```\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = 'all'\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```print(variable)```은 ```print(str(variable))```와 동치이고, 단순히 ```variable```을 입력하여 출력하도록 하는 것은 ```print(repr(variable))```와 동치이다. \n",
+    "<div class=\"alert alert-info\">\n",
     "\n",
-    "* `str`은 보다 읽기 쉬운 형태로 출력하는 것을 목표로 하고, `repr`은 보다 공식적인 표현을 출력하는 것을 목표로 한다."
+    "`print(variable)`은 ```print(str(variable))```와 동치이고, 코드 셀에 ```variable```이름만을 입력하여 출력하도록 하는 것은 ```print(repr(variable))```와 동치이다. \n",
+    "\n",
+    "`str()`은 보다 읽기 쉬운 형태로 출력하는 것을 목표로 하고, `repr()`은 보다 공식적인 표현을 출력하도록 한다.\n",
+    "</div>"
    ]
   },
   {
@@ -1085,7 +1097,7 @@
    "source": [
     "### 문자열 입력 받기\n",
     "\n",
-    "```input()``` 함수를 사용하여 콘솔로부터 문자열을 입력 받을 수 있음\n",
+    "[```input()```](https://docs.python.org/3/library/functions.html#input) 함수를 사용하여 콘솔로부터 문자열을 입력 받을 수 있음\n",
     "\n",
     "* python 2.x에서는 ```raw_input()``` 함수를 이용한다.\n",
     "\n",
@@ -1101,10 +1113,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Input any string : ABCD EFG HIJK LMNOP\n"
+      "Input any string :  ABCD EFG HIJK LMNO\n"
      ]
     }
    ],
@@ -1119,13 +1131,9 @@
     "* 위 코드에서 ```\"Input any string : \"``` 부분은 콘솔 창에 다시 한 번 나타나는 부분으로 원하는 대로 바꾸어 쓸 수 있음\n",
     "  * 입력할 문자열에 대한 적당한 설명을 작성하는 곳이라고 이해하면 좋다.\n",
     "  * 프로그래머가 문자열을 입력 받는 목적을 입력하는 사람에게 설명할 수 있는 부분이라고 생각하자.\n",
-    "\n",
-    "\n",
     "* 콘솔에서 입력받은 문자열은 대입 연산자(=) 왼쪽의 변수 이름으로 저장된다.\n",
     "  * 위 예제에서는 \"ABCD EFG HIJK LMNOP\"라는 문자열을 임의로 입력하였다.\n",
     "  * 입력 받는 변수 이름은 ```input_string```\n",
-    "\n",
-    "\n",
     "* ```print``` 명령을 이용하여 ```input_string``` 저장된 내용을 다시 출력해 보자.\n",
     "  * 임의로 입력한 \"ABCD EFG HIJK LMNOP\"가 다시 출력됨을 알 수 있다."
    ]
@@ -1146,7 +1154,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ABCD EFG HIJK LMNOP\n"
+      "ABCD EFG HIJK LMNO\n"
      ]
     }
    ],
@@ -1168,10 +1176,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Please input your name correctly : \n"
+      "Please input your name correctly :  Kyungsub Lee\n"
      ]
     }
    ],
@@ -1195,7 +1203,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "Kyungsub Lee\n"
      ]
     }
    ],
@@ -1616,7 +1624,7 @@
     "\n",
     "-----------------------------------------\n",
     "\n",
-    "<p> <font color=#00008B> &#9635 대입연산 - 등호를 하나만 사용하는 경우, <code>=</code>, 이를 대입연산자라 한다. </font> </p>\n",
+    "<p> <font color=#00008B> &#9635 대입연산 </font> - 등호를 하나만 사용하는 경우, <code>=</code>, 이를 대입연산자라 한다. </p>\n",
     "\n",
     "아래에서 ```x```라는 변수에 5라는 정수를 대입한다."
    ]
@@ -1645,10 +1653,10 @@
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "cannot assign to literal (3599203734.py, line 1)",
+     "evalue": "cannot assign to literal here. Maybe you meant '==' instead of '='? (3599203734.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [58]\u001b[1;36m\u001b[0m\n\u001b[1;33m    4 = 4\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m cannot assign to literal\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[58], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    4 = 4\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m cannot assign to literal here. Maybe you meant '==' instead of '='?\n"
      ]
     }
    ],
@@ -1660,7 +1668,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p> <font color=#00008B>  &#9635 비교연산 - 등호를 두 개를 연속해서 사용하는 경우, <code>==</code>, 비교연산이라 한다. </font> </p>\n",
+    "<p> <font color=#00008B>  &#9635 비교연산 </font> - 등호를 두 개를 연속해서 사용하는 경우, <code>==</code>, 비교연산이라 한다. 이것 외에도 다양한 비교연산이 있다.  </p>\n",
     "\n",
     "아래 예제에서는 숫자 4와 숫자 4가 같은지 비교하고 있다. 당연히 같으므로 결과는 ```True```이다."
    ]
@@ -1806,7 +1814,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">  \n",
-    "<b>주의:</b> =와 =의 차이는 프로그램 초보자들이 빈번히 혼동하는 부분이다. 연습을 통해 잘 숙지하도록 한다.\n",
+    "<b>주의:</b> =와 ==의 차이는 프로그램 초보자들이 빈번히 혼동하는 부분이다. 연습을 통해 잘 숙지하도록 한다.\n",
     "</div>"
    ]
   },
@@ -1854,7 +1862,7 @@
    "source": [
     "### 비교연산\n",
     "\n",
-    "비교연산의 종류\n",
+    "<p> &#9635 <font color=#00008B> 비교연산의 종류 </font> </p>\n",
     "\n",
     "\n",
     "| 비교연산자 | 대응되는 수학기호 |\n",
@@ -1945,11 +1953,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 복합대입연산자\n",
+    "### 복합대입연산자 (Compound assignment operator)\n",
     "\n",
-    "연산과 대입을 동시에 할 수 있음. 다음의 코드에서\n",
+    "<p> <font color=#00008B> &#9635  복합대입연산자 </font> -  <code>+=, -=, *=, /=, %= </code> </p>\n",
+    "\n",
+    "변수에 값을 할당하면서, 변수의 값을 변경하는 연산자로 연산과 대입을 동시에 할 수 있음. 다음의 코드에서\n",
+    "\n",
     "* ```i += 3``` 는 ```i = i + 3``` 과 같고\n",
-    "* ```j -= 0.5``` 은 ```j = j - 0.5``` 과 같다.\n"
+    "* ```j -= 0.5``` 는 ```j = j - 0.5``` 과 같다.\n",
+    "* ```m *= 10``` 는 ```m = m * 10``` 과 같고,\n",
+    "* ```n /= 5``` 는 ```n = n / 5``` 과 같다.\n"
    ]
   },
   {
@@ -1997,6 +2010,78 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = 2\n",
+    "k *= 4  # j = k * 4\n",
+    "k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = 2\n",
+    "m *= 10\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 20\n",
+    "n /= 5\n",
+    "n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2022,7 +2107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
